@@ -22,6 +22,7 @@ no_index:
     - t
     - xt
 requires:
+  Dicom::DCMTK::DCMDump::Get: 0.02
   Dicom::File::Detect: 0.02
   DicomPack::IO::DicomWriter: 0.95
   File::Find::Rule::Dicom: 0.04
