@@ -23,6 +23,9 @@ SEE ALSO
     DicomPack::Util::DicomDumper
         dump the content of a dicom file to stdout
 
+    Dicom::DCMTK::DCMDump::Get
+        Perl Class for getting DICOM DCMTK dcmdump output for DICOM file.
+
     Dicom::File::Detect
         Detect DICOM file through magic string.
 
